Changelog for mk-query-digest:

   * Log entries without a Time property crashed --review (issue 263).

2009-02-01: version 0.9.2

   * Renamed from mk-log-parser to mk-query-digest.
   * Added the --timeline option (issue 254).
   * Added the ability to analyze with --groupby distill (issue 254).
   * Added the ability to analyze with --groupby tables (issue 230).
   * Table names with reserved words weren't recognized (issue 209).
   * Changed the names of options --top, --analyze, --worst, etc.
   * Added the ability to aggregate the log multiple ways (issue 176).
   * Rewrote internals to aid in other projects (partial work on issue 242).
   * Made the SHOW CREATE/SHOW STATUS have the sample query's DB (issue 213).
   * Added more information to the global header (issue 200).
   * Reformatted the query report header (issue 205).
   * Added the --outliers option (issue 171).
   * Added the --mirror option (issue 236).
   * Made --execute reconnect when the server goes away (issue 237).
   * Made --processlist reconnect when the server goes away (issue 237).
   * Added --daemonize and --pid (issue 235).
   * Buggy log output for administrator commands skewed results (issue 239).
   * Switched to logarithmic buckets to save memory (issue 224).
   * Trimmed mysqldump insert samples (issue 216).
   * Enhanced the query fingerprinting (issue 220).
   * Query_time with two decimal points caused a crash (issue 234).
   * Very large INSERT statements from mysqldump segfaulted on older Perl.
   * Very large attribute values in slowlogs caused a crash (issue 197).
   * Added the ability to watch the processlist with --processlist (issue 151).
   * Added --execute and --filter options (issue 207).
   * Fixed and updated POD.

2008-12-29: version 0.9.1

   * Added --analyze option to combine analysis and --review (issue 162).
   * Added --fingerprints (-f) option (issue 160).
   * Trying to take log of 0 caused a crash (issue 141).