@@ -1,0 +1,44 @@
+# Time: margdl 11:48:27 # User@Host: [SQL_SLAVE] @  []
+# Thread_id: 10  Schema: foo
+# Query_time: 0.000012  Lock_time: 0.000000  Rows_sent: 0  Rows_examined: 0
+# QC_Hit: No  Full_scan: No  Full_join: No  Tmp_table: No  Disk_tmp_table: No
+# Filesort: No  Disk_filesort: No  Merge_passes: 0
+# No InnoDB statistics available for this query
+SELECT col FROM foo_tbl;
+# Time: margdl 11:48:57 # User@Host: [SQL_SLAVE] @  []
+# Thread_id: 10  Schema: foo
+# Query_time: 0.000012  Lock_time: 0.000000  Rows_sent: 0  Rows_examined: 0
+# QC_Hit: No  Full_scan: No  Full_join: No  Tmp_table: No  Disk_tmp_table: No
+# Filesort: No  Disk_filesort: No  Merge_passes: 0
+# No InnoDB statistics available for this query
+SELECT col FROM foo_tbl;
+# Time: margdl 11:48:57 # User@Host: [SQL_SLAVE] @  []
+# Thread_id: 20
+# Query_time: 0.000012  Lock_time: 0.000000  Rows_sent: 0  Rows_examined: 0
+# QC_Hit: No  Full_scan: No  Full_join: No  Tmp_table: No  Disk_tmp_table: No
+# Filesort: No  Disk_filesort: No  Merge_passes: 0
+# No InnoDB statistics available for this query
+USE bar;
+SELECT col FROM bar_tbl;
+# Time: margdl 11:49:05 # User@Host: [SQL_SLAVE] @  []
+# Thread_id: 10  Schema: bar
+# Query_time: 0.000012  Lock_time: 0.000000  Rows_sent: 0  Rows_examined: 0
+# QC_Hit: No  Full_scan: No  Full_join: No  Tmp_table: No  Disk_tmp_table: No
+# Filesort: No  Disk_filesort: No  Merge_passes: 0
+# No InnoDB statistics available for this query
+SELECT col FROM bar_tbl;
+# Time: margdl 11:49:07 # User@Host: [SQL_SLAVE] @  []
+# Thread_id: 20
+# Query_time: 0.000012  Lock_time: 0.000000  Rows_sent: 0  Rows_examined: 0
+# QC_Hit: No  Full_scan: No  Full_join: No  Tmp_table: No  Disk_tmp_table: No
+# Filesort: No  Disk_filesort: No  Merge_passes: 0
+# No InnoDB statistics available for this query
+USE bar;
+SELECT col FROM bar_tbl;
+# Time: margdl 11:49:30 # User@Host: [SQL_SLAVE] @  []
+# Thread_id: 30  Schema: foo
+# Query_time: 0.000012  Lock_time: 0.000000  Rows_sent: 0  Rows_examined: 0
+# QC_Hit: No  Full_scan: No  Full_join: No  Tmp_table: No  Disk_tmp_table: No
+# Filesort: No  Disk_filesort: No  Merge_passes: 0
+# No InnoDB statistics available for this query
+SELECT col FROM foo_tbl;
