@@ -1,6 +1,7 @@
 Changelog for mk-query-digest:
 
    * Log entries without a Time property crashed --review (issue 263).
+   * All-zero timestamps displayed in unwanted places (issue 202).
 
 2009-02-01: version 0.9.2
 
